# kza

./: Makefile  README.md  doxygen_config  kz.c  kz.h  kz_example.py  kza.c  kza.h  kza.hpp  kza_example.py  kzf.c  run_tests.py  timer.c  timer.h
doc/: doxygen_config
docs/html/: README_8md.html  annotated.html  classKZ1D-members.html  classKZ1D.html  classKZ2D-members.html  classKZ2D.html  classKZA1D-members.html  classKZA1D.html  classKZA2D-members.html  classKZA2D.html  classKZAExtension-members.html  classKZAExtension.html  classKZGeneric-members.html  classKZGeneric.html  classTimer-members.html  classTimer.html  classes.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  kza_8hpp.html  kza_8hpp_source.html  md_README.html  menudata.js  pages.html  structKZGeneric_1_1ThreadData-members.html  structKZGeneric_1_1ThreadData.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  (+4 more)
examples/: kz_example.py  kza_example.py
src/: CMakeLists.txt  KZGeneric.h  Makefile  kz.c  kz.cpp  kza.c  kza.cpp  kza.h  kza.hpp  pywrap.cpp  timer.c  timer.h
tests/: CMakeLists.txt  pywrap.cpp  run_tests.py
tests/examples/: kz1d_example.py  kz2d_example.py  kz_example.py  kza1d_example.py  kza2d_example.py  kza_example.py
tests/kz1d/: test1.in  test1.out  test10.in  test10.out  test11.in  test11.out  test12.in  test12.out  test13.in  test13.out  test14.in  test14.out  test15.in  test15.out  test16.in  test16.out  test17.in  test17.out  test18.in  test18.out  test19.in  test19.out  test2.in  test2.out  test20.in  test20.out  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out  test6.in  test6.out  test7.in  test7.out  test8.in  test8.out  test9.in  test9.out
tests/kz2d/: test1.in  test1.out  test2.in  test2.out  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out
tests/kza1d/: test1.in  test1.out  test10.in  test10.out  test11.in  test11.out  test12.in  test12.out  test13.in  test13.out  test14.in  test14.out  test15.in  test15.out  test16.in  test16.out  test17.in  test17.out  test18.in  test18.out  test19.in  test19.out  test2.in  test2.out  test20.in  test20.out  test3.in  test3.out  test4.in  test4.out  test5.in  test5.out  test6.in  test6.out  test7.in  test7.out  test8.in  test8.out  test9.in  test9.out
theory/tex files and settings/: content.tex  main.tex  tocpage.tex
(+4 files in other folders)
